# CPPEXAM3

cycle_shared_ptr/: CMakeLists.txt  main.cpp
enable_shared_from_this/: CMakeLists.txt  main.cpp
var9/: CMakeLists.txt
variant12/: CMakeLists.txt  mainwindow.cpp
variant14/: CMakeLists.txt  main.cpp
variant19/: CMakeLists.txt  main.cpp
variant19/.cache/clangd/index/: main.cpp.3BA4CBD7493D9D8F.idx
variant20/: CMakeLists.txt  main.cpp
variant9/: CMakeLists.txt  facultymodel.cpp  facultymodel.h  mainwindow.cpp  mainwindow.h
